app/assets/stylesheets/modules/_reels.css.scss
.reel-page {

  .preloader {
    display: none;
  }

  .hero {
    padding: 70px 0 30px;
    background: #fff;
    text-align: center;

    h4 {
      width: 50%;
      margin: 0 auto;
    }
  }

  .link-bar {
    width: 100%;
    border-top: solid $med-gray 1px;
    padding: 15px 0;
    position: relative;
    -webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.44);
    -moz-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.44);
    box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.44);

    .avatar {
      height: 40px;
      width: 40px;
      margin: 0;
      float: none;
      display: inline-block !important;
      border-radius: 100px;
      background-size: cover;
      background-position: center center;
      background-repeat: no-repeat;
    }

    .avatar, h5 {
      display: inline;
      vertical-align: middle
    }
  }

  .edit-reel {
    padding: 5px 20px;
  }

  .fb-share-button {
    margin-top: 6px;
  }
}

.reel {
  background: #e9e9e9;
  min-height: 645px;

  .reel-grid {
    background: #fff;
    border-radius: 4px;
    margin-top: 30px;
    padding: 20px 0;
    -webkit-box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.22);
    -moz-box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.22);
    box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.22);

    img, iframe {
      width: 100%;
    }

    .grid-item {
      border-radius: 10px;
      padding-top: 220px;
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center center;
      overflow: hidden;

      img {
        height: 40px;
        width: 40px;
        position: absolute;
        top: 47%;
        left: 47%;
      }
    }

    .caption {
      width: 100%;
      bottom: 0;
      padding: 5px 30px;
      color: #fff;
      background-color:rgba(0, 0, 0, 0.4);
    }
  }
}

@media (max-width: 767px) {
  .grid-item {
    margin-bottom: 20px;
  }

  .reel-grid {
    .row-fluid {
      margin: 0;
    }
  }
}

@media (max-width: 450px) {
  .reel-page {
    .hero {
      h4 {
        width: 90%;
      }
    }
  }

  .reel-page {
    .edit-reel {
      position: relative;
      width: 100%;
      padding: 10px 0;
      margin: 20px 0;
    }
  }

}

